# interprocess-converse

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
