[package]
name = "interprocess-converse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Xaeroxe/interprocess-converse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
async-io-converse = { git = "https://github.com/Xaeroxe/async-io-converse.git" }
interprocess = { git = "https://github.com/Xaeroxe/interprocess.git", features = ["tokio_support"], branch = "patch-1" }
bincode = "1.3"
tokio = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
uuid = { version = "1.2", features = ["v4"] }

[target.'cfg(not(windows))'.dependencies]
tempfile = "3.3.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"]}
rand = "0.8"